Add comprehensive unit tests for value objects, entities, and use cases

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "preset": "ts-jest",
     "testEnvironment": "node",
     "roots": [
-      "<rootDir>/src"
+      "<rootDir>/src",
+      "<rootDir>/tests"
     ],
     "testMatch": [
       "**/__tests__/**/*.test.ts",
