--- a/package.json
+++ b/package.json
@@ -1,66 +1,19 @@
 {
-  "name": "clean-architecture",
+  "name": "clean-architecture-monorepo",
   "version": "1.0.0",
-  "description": "Clean Architecture Backend API with DDD and Event-Driven Design",
-  "main": "dist/index.js",
-  "scripts": {
-    "build": "tsc",
-    "start": "node dist/index.js",
-    "dev": "nodemon --exec ts-node src/index.ts",
-    "test": "jest",
-    "lint": "eslint src/**/*.ts",
-    "lint:fix": "eslint src/**/*.ts --fix"
-  },
-  "jest": {
-    "preset": "ts-jest",
-    "testEnvironment": "node",
-    "roots": [
-      "<rootDir>/src",
-      "<rootDir>/tests"
-    ],
-    "testMatch": [
-      "**/__tests__/**/*.test.ts",
-      "**/?(*.)+(spec|test).ts"
-    ],
-    "collectCoverageFrom": [
-      "src/**/*.ts",
-      "!src/**/*.d.ts",
-      "!src/index.ts"
-    ]
-  },
-  "keywords": [
-    "clean-architecture",
-    "ddd",
-    "typescript",
-    "node"
+  "description": "Mono-repo for Clean Architecture Backend and React Frontend",
+  "private": true,
+  "workspaces": [
+    "apps/*"
   ],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
-  "dependencies": {
-    "@types/express": "^4.17.21",
-    "@types/mongoose": "^5.11.97",
-    "@types/node": "^20.14.10",
-    "@types/redis": "^4.0.11",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-
-    "kafkajs": "^2.2.4",
-    "mongoose": "^8.5.3",
-    "redis": "^4.6.13",
-    "reflect-metadata": "^0.2.2",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.5.3",
-    "uuid": "^10.0.0"
+  "scripts": {
+    "build": "npm run --workspaces build",
+    "test": "npm run --workspaces test",
+    "lint": "npm run --workspaces lint",
+    "dev:backend": "npm run --workspace=backend dev",
+    "install:all": "npm install"
   },
   "devDependencies": {
-    "@types/jest": "^30.0.0",
-    "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.54.0",
-    "@typescript-eslint/parser": "^8.54.0",
-    "eslint": "^9.39.2",
-    "jest": "^29.7.0",
-    "nodemon": "^3.1.11",
-    "ts-jest": "^29.4.6"
+    "typescript": "^5.5.3"
   }
 }
