feat: Add complete React frontend with Clean Architecture
- Add scalable React frontend with TypeScript and Vite
- Implement proper directory structure (components, pages, layouts, types, services, utils)
- Add navigation system with header/footer and routing
- Create full CRUD product management interface
- Configure Docker Compose for local development environment
- Update backend Dockerfile to use Node.js 20
- Fix TypeScript configuration for Docker builds
- Add CI/CD GitHub Actions workflow
- Remove redundant docker-compose.yml from backend
- Update package.json files with proper dependencies
- All services build and run successfully with docker compose up

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -1,35 +1,30 @@
 {
   "name": "frontend",
   "version": "1.0.0",
-  "description": "React Frontend for Clean Architecture",
-  "private": true,
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "lint": "eslint src/**/*.{js,jsx,ts,tsx}",
-    "lint:fix": "eslint src/**/*.{js,jsx,ts,tsx} --fix"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs",
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1"
+    "react-router-dom": "^6.26.0"
   },
   "devDependencies": {
-    "@types/react": "^18.3.1",
-    "@types/react-dom": "^18.3.1"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "@types/react": "^19.2.13",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.4",
+    "autoprefixer": "^10.4.24",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
+    "typescript": "^5.9.3",
+    "vite": "^7.3.1"
   }
 }
