--- a/compose.yml
+++ b/compose.yml
@@ -1,6 +1,17 @@
 services:
+  web:
+    build:
+      context: apps/frontend
+      dockerfile: Dockerfile
+    ports:
+      - "5173:5173"
+    depends_on:
+      - app
+
   app:
-    build: .
+    build:
+      context: apps/backend
+      dockerfile: Dockerfile
     ports:
       - "3000:3000"
     environment:
