feat: Connect frontend to backend API
- Add GetAllProductsUseCase and route to backend
- Update frontend ProductService to use real API calls
- Fix Product type to match backend response structure
- Update ProductCard and ProductForm for string IDs
- Configure Docker port mapping correctly for Vite preview
- Frontend now fetches real data from backend API
- Full CRUD operations working end-to-end

--- a/apps/frontend/Dockerfile
+++ b/apps/frontend/Dockerfile
@@ -19,5 +19,5 @@ RUN npm run build
 # Expose the port the app runs on
 EXPOSE 5173
 
-# Command to run the application
-CMD ["npm", "run", "preview"]
+# Command to run the application (bind to all interfaces)
+CMD ["npm", "run", "preview", "--", "--host", "0.0.0.0"]
