--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -42,9 +42,9 @@
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.14.10",
     "@types/redis": "^4.0.11",
+    "cors": "^2.8.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-
     "kafkajs": "^2.2.4",
     "mongoose": "^8.5.3",
     "redis": "^4.6.13",
@@ -54,6 +54,7 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/jest": "^30.0.0",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
