--- a/apps/backend/.eslintrc.json
+++ b/apps/backend/.eslintrc.json
@@ -1,20 +1,23 @@
 {
+  "root": true,
   "env": {
     "es2020": true,
     "node": true
   },
   "extends": [
-    "eslint:recommended",
-    "@typescript-eslint/recommended"
+    "eslint:recommended"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": 2020,
-    "sourceType": "module"
+    "sourceType": "module",
+    "project": "./tsconfig.json"
   },
+  "plugins": ["@typescript-eslint"],
   "rules": {
     "@typescript-eslint/no-unused-vars": "error",
-    "@typescript-eslint/explicit-function-return-type": "off"
+    "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/no-explicit-any": "warn"
   },
   "ignorePatterns": ["node_modules/", "dist/", "**/*.js"]
 }
